# gtaRenderHook

./: .clang-format  .gitignore  1  CMakeLists.txt  GTA SA vulkan render hook.smproj  ISSUE_TEMPLATE.md  LICENSE  README.md  gtaRenderHook.plog  gtaRenderHook.sln  gtaRenderHook_solution_suppressions.cfg  printer-fb-messenger-bot.git  response_file.txt
RHEngineLib/: CMakeLists.txt  RHEngineLib.vcxproj  RHEngineLib.vcxproj.filters  RHEngineLib_project_suppressions.cfg  TODO  common.h  dev_select_dialog.rc  resource.h  stdafx.cpp  stdafx.h  targetver.h
RHEngineLib/Common/: IStateCacheObject.cpp  IStateCacheObject.h
RHEngineLib/DebugUtils/: DebugLogger.cpp  DebugLogger.h
RHEngineLib/Engine/: Definitions.h  FlagsToString.h  IRenderer.h  RendererFactory.cpp  RendererFactory.h  RwRenderEngine.cpp  RwRenderEngine.h
RHEngineLib/ImGUI/: imgui.cpp  imgui.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.h
RHEngineLib/MemoryInjectionUtils/: InjectorHelpers.h
RHEngineLib/RWUtils/: RwAPI.cpp  RwAPI.h  RwGameHooks.cpp  RwGameHooks.h  RwPointerTables.h  RwRHConvert.cpp  RwRHConvert.h
RHEngineLib/TestUtils/: DeviceSettingsDialog.cpp  DeviceSettingsDialog.h  TestSample.cpp  TestSample.h  WindowsSampleWrapper.cpp  WindowsSampleWrapper.h
RHEngineTests/: CMakeLists.txt  RHEngineTests.cpp  RHEngineTests.rc  RHEngineTests.vcxproj  RHEngineTests.vcxproj.filters  Resource.h  stdafx.cpp  stdafx.h  targetver.h
Tests/ClearScreenTest/: CMakeLists.txt  ClearScreenSample.cpp  ClearScreenSample.h  ClearScreenTest.vcxproj  ClearScreenTest.vcxproj.filters  main.cpp
Tests/DefaultPipelineTest/: CMakeLists.txt  DefaultPipelineTest.vcxproj  DefaultPipelineTest.vcxproj.filters  SimpleSample.cpp  SimpleSample.h  clump_read_funcs.cpp  clump_read_funcs.h  forward_pbr_pipeline.cpp  forward_pbr_pipeline.h  gta_map_loader.h  imgui.ini  main.cpp  rp_atomic_funcs.cpp  rp_atomic_funcs.h  rp_clump_funcs.cpp  rp_clump_funcs.h  rp_geometry_binmesh_read_funcs.cpp  rp_geometry_binmesh_read_funcs.h  rp_geometry_funcs.cpp  rp_geometry_funcs.h  rp_geometry_read_funcs.cpp  rp_geometry_read_funcs.h  rp_material_funcs.cpp  rp_material_funcs.h  rp_material_read_funcs.cpp  rp_material_read_funcs.h  rp_matlist_funcs.cpp  rp_matlist_funcs.h  rp_matlist_read_funcs.cpp  rp_matlist_read_funcs.h  rw_frame_funcs.cpp  rw_frame_funcs.h  rw_framelist_read_funcs.cpp  rw_framelist_read_funcs.h  rw_geometrylist_read_funcs.cpp  rw_geometrylist_read_funcs.h
Tests/DisplayModeSelectionTest/: CMakeLists.txt  DisplayModeTest.cpp  Im2DRenderer.cpp  Im2DRenderer.h  main.cpp
Tests/GTAModelLoadingTest/: CMakeLists.txt  ModelLoadingTest.cpp  ModelLoadingTest.h  forward_pbr_pipeline.cpp  forward_pbr_pipeline.h  main.cpp
Tests/GTAModelRayTracingTest/: CMakeLists.txt  ModelLoadingTest.cpp  ModelLoadingTest.h  forward_pbr_pipeline.cpp  forward_pbr_pipeline.h  gta_map_loader.cpp  gta_map_loader.h  main.cpp
Tests/TextureLoadingTest/: CMakeLists.txt  SimpleSample.cpp  SimpleSample.h  TextureLoadingTest.vcxproj  main.cpp
gta3_render_hook/: CMakeLists.txt  dllmain.cpp  forward_pbr_pipeline.cpp  gta3_default_rendering_pipeline.cpp  gta3_default_rendering_pipeline.h  gta3_geometry_proxy.cpp  gta3_geometry_proxy.h  gta3_render_hook.cpp  gta3_render_hook.vcxproj  gta3_render_hook.vcxproj.filters  stdafx.h  targetver.h
gta_3_render_hook/: CMakeLists.txt  call_redirection_util.cpp  call_redirection_util.h  compatibility_checks.cpp  compatibility_checks.h  dllmain.cpp  gta3_geometry_proxy.cpp  gta3_geometry_proxy.h
gta_3_render_hook/config/: GameRendererConfigBlock.cpp  GameRendererConfigBlock.h
gta_3_render_hook/game/: Clock.cpp  Clouds.cpp  Clouds.h  Entity.cpp  Entity.h  ModelInfo.cpp  ModelInfo.h  PointLights.cpp  PointLights.h  PtrList.h  Renderer.cpp  Renderer.h  Shadows.cpp  Shadows.h  Streaming.cpp  Streaming.h  TxdStore.cpp  TxdStore.h  Vector.cpp  Vector.h  World.cpp  World.h
gta_3_render_hook/game_patches/: base_model_pipeline.cpp  base_model_pipeline.h  car_path_bug_fix.cpp  car_path_bug_fix.h  material_system_patches.cpp  material_system_patches.h  rwd3d8_patches.cpp  skin_model_pipeline.cpp
gta_3_render_hook/render_driver/: CMakeLists.txt  main.cpp
gta_sa_render_hook/: CMakeLists.txt  dllmain.cpp  idle_hook.cpp  renderloop.cpp
gta_sa_render_hook/game/: TxdStore.cpp  TxdStore.h
gta_sa_render_hook/game_patches/: material_system_patches.cpp  material_system_patches.h
gta_sa_render_hook/gta_sa_internal_classes/: CColorSet.cpp  CColorSet.h  audioengine.cpp  audioengine.h  menumanager.h  rw_func_ptrs.cpp  rw_func_ptrs.h  scene.cpp  scene.h  sprite2d.h
gta_sa_render_hook/render_driver/: CMakeLists.txt  main.cpp
gta_vc_render_hook/: CMakeLists.txt  dllmain.cpp
gta_vc_render_hook/game/: Clock.cpp  Clock.h  Entity.h  Game.cpp  Game.h  ModelInfo.cpp  ModelInfo.h  PointLights.cpp  PointLights.h  (+9 more)
gtasa_render_hook/: CMakeLists.txt  dllmain.cpp  idle_hook.cpp  idle_hook.h  renderloop.cpp  renderloop.h
gtasa_render_hook_rt/: CMakeLists.txt  bilateralblurpass.cpp  bilateralblurpass.h  bvh_builder.cpp  bvh_builder.h  dllmain.cpp  forward_pbr_pipeline.cpp  forward_pbr_pipeline.h  gbuffer_pipeline.cpp  gbuffer_pipeline.h  gta3_default_rendering_pipeline.cpp  gta3_default_rendering_pipeline.h  gta3_geometry_proxy.h  ray_tracer.cpp  ray_tracer.h  ray_tracing_scene_cache.cpp  ray_tracing_scene_cache.h  stdafx.h
rh_engine_lib/: CMakeLists.txt  Doxyfile  TODO  common.h  targetver.h
rw_ray_tracing_lib/: CMakeLists.txt  bvh_builder.cpp  bvh_builder.h  ray_tracer.cpp  ray_tracer.h  ray_tracing_scene_cache.cpp  ray_tracing_scene_cache.h  ray_tracing_texture_cache.cpp  ray_tracing_texture_cache.h
rw_render_algorithms_lib/: CMakeLists.txt  deferred_rendering.cpp  deferred_rendering.h
rw_rh_engine_lib/: CMakeLists.txt  RwRenderEngine.cpp  RwRenderEngine.h  common_headers.h  install_rw_library.cmake  material_storage.cpp  material_storage.h  render_loop.cpp  render_loop.h  rw_game_hooks.cpp  rw_game_hooks.h  rwtestsample.cpp  rwtestsample.h  scene_graph.cpp  scene_graph.h
rw_x64_render_driver/: CMakeLists.txt  main.cpp
(+981 files in other folders)
